[package]
name = "newsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = {version = "1", features = ["full"]}
serde ={ version = "1", features = ["derive"]}
serde_json = "*"
anyhow = "*"
url = "*"
thiserror = "*"
ureq = { version = "2.1.1", features = ["json"] }